--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,7 +226,6 @@ section {
   text-align: right;
 }
 
-
 /* REACH OUT STYLES START */
 .contact {
   text-align: center;
@@ -256,7 +255,8 @@ section {
   font-size: 32px;
 }
 
-.contact-info p, .contact-info address {
+.contact-info p,
+.contact-info address {
   margin: 20px 0;
   line-height: 1.5;
   font-size: 20px;
