--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -153,11 +153,12 @@ section {
 /* SECTION TITLE STYLES START */
 .section-title {
   font-size: 55px;
-  display: inline-block;
-  padding: 0 100px 20px 100px;
   border-bottom: 3px solid;
-  margin-bottom: 35px;
   color: #024e76;
+  padding-bottom: 20px;
+  text-align: center;
+  margin: 0px auto 35px auto;
+  width: 50%;
 }
 
 .primary-border {
@@ -170,9 +171,6 @@ section {
 /* SECTION TITLE STYLES END */
 
 /* WHAT WE DO STYLES */
-.intro {
-  text-align: center;
-}
 
 .intro p {
   line-height: 1.7;
@@ -180,13 +178,13 @@ section {
   width: 80%;
   margin: 0 auto;
   font-size: 20px;
+  text-align: center;
 }
 /* WHAT YOU DO STYLES END */
 
 
 /* WHAT YOU DO STYLES START */
 .steps { 
-  text-align: center;
   background: #fce138;
 }
 
@@ -216,9 +214,7 @@ section {
 /* WHAT YOU DO STYLES END */
 
 /* MEET THE TRAINERS START */
-.trainers {
-  text-align: center;
-}
+
 
 .trainer {
   width: 900px;
@@ -258,7 +254,6 @@ section {
 
 /* REACH OUT STYLES START */
 .contact {
-  text-align: center;
   background: #024e76;
 }
 
@@ -306,4 +301,8 @@ height: 400px;
 
 .text-right {
   text-align: right;
+}
+
+.flex-row {
+  display: flex;
 }
